# auth/src/adapter/driving/web/handlers.rs
@@ -10,8 +10,8 @@ use uuid::Uuid;
 use crate::adapter::driven::cache::redis::user_cache::AuthCache;
 use crate::adapter::driven::email_service::aws_ses_email_service::AWSEmailService;
 use crate::adapter::driven::persistence::sqlx::user_repository::AuthRepository;
-use crate::application::use_cases;
-use crate::schemas::{UuidWrapper, PasswordJson, JsonBool};
+use crate::application::use_cases::{create_auth_request, create_auth_confirm, is_data_in_use, login_auth, delete_auth, update_password, add_identy_request, add_identy_confirm, reset_password_request, reset_password_confirm};
+use crate::schemas::{UuidWrapper, PasswordJson, JsonBool, ResOk};
 use common::adapter::state::AppState;
 use super::schemas::{AuthJson, ValidateTransaction, Credentials, JsonToken, UpdatePassword, IdentificationJson};
 
@@ -19,8 +19,8 @@ use super::schemas::{AuthJson, ValidateTransaction, Credentials, JsonToken, Upda
 pub async fn handle_create_auth_request(
     State(state): State<AppState>,
     Json(payload): Json<AuthJson>,
-) -> Result<Json<String>, (StatusCode, String)> {
-    match use_cases::create_auth_request::execute(
+) -> JsonResponse<IdentificationJson> {
+    match create_auth_request::execute(
         &state.db_sql_pool,
         &state.cache_pool,
         &state.email_conn,
@@ -28,23 +28,20 @@ pub async fn handle_create_auth_request(
         &AuthCache {},
         &AWSEmailService {},
         &state.config.environment,
-        use_cases::create_auth_request::Payload {
+        create_auth_request::Payload {
             password: payload.password,
             identification_type: payload.identifications[0].id_type.clone(),
             identification_value: payload.identifications[0].value.clone(),
         },
     ).await {
-        Ok(user) => Ok(Json(user)),
+        Ok(identification) => JsonResponse::new_ok(IdentificationJson { 
+            id_type: identification.get_type(), 
+            value: identification.get_value() 
+        }),
         Err(error) => match error {
-            use_cases::create_auth_request::CreateError::InvalidData(err) => {
-                Err((StatusCode::BAD_REQUEST, err))
-            }
-            use_cases::create_auth_request::CreateError::Unknown(err) => {
-                Err((StatusCode::INTERNAL_SERVER_ERROR, err))
-            }
-            use_cases::create_auth_request::CreateError::Conflict(err) => {
-                Err((StatusCode::CONFLICT, err))
-            }
+            create_auth_request::CreateError::InvalidData(err) => JsonResponse::new_bad_req_err(0, err),
+            create_auth_request::CreateError::Conflict(err) => JsonResponse::new_conflict_err(0, err),
+            create_auth_request::CreateError::Unknown(err) => JsonResponse::new_int_ser_err(0, err),
         },
     }
 }
@@ -52,22 +49,22 @@ pub async fn handle_create_auth_request(
 pub async fn handle_create_auth_confirmation(
     State(state): State<AppState>,
     Json(payload): Json<ValidateTransaction>,
-) -> Result<Json<UuidWrapper>, (StatusCode, String)>  {
-    match use_cases::create_auth_confirm::execute(
+) -> JsonResponse<UuidWrapper> {
+    match create_auth_confirm::execute(
         &state.db_sql_pool,
         &state.cache_pool,
         &AuthRepository {},
         &AuthCache {},
-        use_cases::create_auth_confirm::Payload {
+        create_auth_confirm::Payload {
             transaction_id: payload.transaction_id,
             confirmation_code: payload.confirmation_code
         }
     ).await {
-        Ok(auth) => Ok(Json(UuidWrapper{ uuid: auth.user_id.into() })),
+        Ok(auth) => JsonResponse::new_ok(UuidWrapper { uuid: auth.user_id.into() }),
         Err(error) => match error {
-            use_cases::create_auth_confirm::CreateError::InvalidData(err) => Err((StatusCode::BAD_REQUEST, err)),
-            use_cases::create_auth_confirm::CreateError::Conflict(err) => Err((StatusCode::CONFLICT, err)),
-            use_cases::create_auth_confirm::CreateError::Unknown(err) => Err((StatusCode::INTERNAL_SERVER_ERROR, err)),
+            create_auth_confirm::CreateError::InvalidData(err) => JsonResponse::new_bad_req_err(0, err),
+            create_auth_confirm::CreateError::Conflict(err) => JsonResponse::new_conflict_err(0, err),
+            create_auth_confirm::CreateError::Unknown(err) => JsonResponse::new_int_ser_err(0, err),
         }
     }
 }
@@ -77,40 +74,43 @@ pub async fn handle_identifier_available(
     State(state): State<AppState>,
     Query(identifier): Query<IdentificationJson>,
 ) -> JsonResponse<JsonBool> {
-    let res = use_cases::is_data_in_use::execute(
+    let res = is_data_in_use::execute(
         &state.db_sql_pool,
         &AuthRepository {},
-        use_cases::is_data_in_use::Payload {
+        is_data_in_use::Payload {
             identify_type: identifier.id_type,
             identify_value: identifier.value,
         }
     ).await;
     match res {
         Ok(is_in_use) => JsonResponse::new_ok(JsonBool { value: !is_in_use }),
-        Err(err) => JsonResponse::new_int_ser_err(0, "unknown", err)
+        Err(err) => JsonResponse::new_int_ser_err(0, err)
     }
 }
 
 pub async fn handle_login(
     State(state): State<AppState>,
     Json(credentials): Json<Credentials>,
-) -> Result<Json<JsonToken>, StatusCode> {
-    match use_cases::login_auth::execute(
+) -> JsonResponse<JsonToken> {
+    match login_auth::execute(
         &state.db_sql_pool,
         &AuthRepository {},
         &state.config.secret,
-        use_cases::login_auth::Payload {
+        login_auth::Payload {
             identifier: credentials.identifier,
             password: credentials.password,
         },
     )
     .await
     {
-        Ok(token) => Ok(Json(JsonToken {
+        Ok(token) => JsonResponse::new_ok(JsonToken {
             authorization_token: token,
             token_type: "Bearer".to_string(),
-        })),
-        Err(_) => Err(StatusCode::UNAUTHORIZED),
+        }),
+        Err(err) => match err {
+            login_auth::LoginError::NotFound => JsonResponse::new_not_found_err(0, "user not found".to_string()),
+            login_auth::LoginError::Unauthorized => JsonResponse::new_unauthorized_err(0, "invalid credentials".to_string()),
+        },
     }
 }
 
@@ -118,16 +118,18 @@ pub async fn handle_delete_account(
     State(state): State<AppState>,
     TypedHeader(token): TypedHeader<Authorization<Bearer>>,
     Json(password): Json<PasswordJson>,
-) -> StatusCode {
-    match use_cases::delete_auth::execute(
+) -> JsonResponse<ResOk> {
+    match delete_auth::execute(
         &state.db_sql_pool,
         &AuthRepository {},
         &state.config.secret,
         &token.token().to_string(),
-        use_cases::delete_auth::Payload { password: password.password },
+        delete_auth::Payload { password: password.password },
     ).await {
-        Ok(_) => StatusCode::OK,
-        Err(_) => StatusCode::UNAUTHORIZED,
+        Ok(_) => JsonResponse::new_ok(ResOk { ok: true }),
+        Err(err) => {
+            JsonResponse::new_err(StatusCode::UNAUTHORIZED, 0, "", err.to_string())
+        },
     }
 }
 
@@ -135,23 +137,25 @@ pub async fn handle_update_password(
     State(state): State<AppState>,
     TypedHeader(token): TypedHeader<Authorization<Bearer>>,
     Json(update_password): Json<UpdatePassword>,
-) -> StatusCode {
-    match use_cases::update_password::execute(
+) -> JsonResponse<ResOk> {
+    match update_password::execute(
         &state.db_sql_pool,
         &AuthRepository {},
         &state.config.secret,
         &token.token().to_string(),
-        use_cases::update_password::Payload {
+        update_password::Payload {
             password: update_password.password,
             new_password: update_password.new_password,
         },
     ).await {
-        Ok(_) => StatusCode::OK,
+        Ok(_) => JsonResponse::new_ok(ResOk { ok: true }),
         Err(err) => {
             match err {
-                use_cases::update_password::UpdateError::Unknown(_) => StatusCode::INTERNAL_SERVER_ERROR,
-                use_cases::update_password::UpdateError::Unautorized => StatusCode::UNAUTHORIZED,
-                _ => StatusCode::BAD_REQUEST,
+                update_password::UpdateError::InvalidData(err) => JsonResponse::new_bad_req_err(0, err),
+                update_password::UpdateError::Unauthorized(err) => JsonResponse::new_unauthorized_err(0, err),
+                update_password::UpdateError::NotFound(err) => JsonResponse::new_not_found_err(0, err),
+                update_password::UpdateError::Conflict(err) => JsonResponse::new_conflict_err(0, err),
+                update_password::UpdateError::Unknown(err) => JsonResponse::new_int_ser_err(0, err),
             }
         },
     }
@@ -161,8 +165,8 @@ pub async fn handle_add_identifier_request(
     State(state): State<AppState>,
     TypedHeader(token): TypedHeader<Authorization<Bearer>>,
     Json(identifier): Json<IdentificationJson>,
-) -> Result<String, StatusCode> {
-    match use_cases::add_identy_request::execute(
+) -> JsonResponse<ResOk> {
+    match add_identy_request::execute(
         &state.db_sql_pool,
         &state.cache_pool,
         &state.email_conn,
@@ -171,22 +175,19 @@ pub async fn handle_add_identifier_request(
         &AWSEmailService {},
         &state.config.secret,
         &token.token().to_string(),
-        use_cases::add_identy_request::Payload {
+        add_identy_request::Payload {
             identify_value: identifier.value,
             identify_type: identifier.id_type,
         }
     ).await {
-        Ok(res) => {
-            match res {
-                Some(user) => Ok(user),
-                None => Err(StatusCode::NOT_FOUND),
-            }
-        },
+        Ok(_) => JsonResponse::new_ok(ResOk { ok: true }),
         Err(err) => {
             match err {
-                use_cases::add_identy_request::UpdateError::Unknown(_) => Err(StatusCode::INTERNAL_SERVER_ERROR),
-                use_cases::add_identy_request::UpdateError::Unautorized => Err(StatusCode::UNAUTHORIZED),
-                _ => Err(StatusCode::BAD_REQUEST),
+                add_identy_request::UpdateError::Unauthorized(err) => JsonResponse::new_unauthorized_err(0, err),
+                add_identy_request::UpdateError::NotFound(err) => JsonResponse::new_not_found_err( 0, err),
+                add_identy_request::UpdateError::InvalidData(err) => JsonResponse::new_bad_req_err(0, err),
+                add_identy_request::UpdateError::Conflict(err) => JsonResponse::new_conflict_err(0, err),
+                add_identy_request::UpdateError::Unknown(err) => JsonResponse::new_int_ser_err(0, err),
             }
         },
     }
@@ -196,25 +197,25 @@ pub async fn handle_add_identifier_confirmation(
     State(state): State<AppState>,
     TypedHeader(token): TypedHeader<Authorization<Bearer>>,
     Json(data): Json<ValidateTransaction>,
-) -> Result<Json<UuidWrapper>, StatusCode> {
-    match use_cases::add_identy_confirm::execute(
+) -> JsonResponse<ResOk> {
+    match add_identy_confirm::execute(
         &state.db_sql_pool,
         &state.cache_pool,
         &AuthRepository {},
         &AuthCache {},
         &state.config.secret,
         &token.token().to_string(),
-        use_cases::add_identy_confirm::Payload {
+        add_identy_confirm::Payload {
             transaction_id: data.transaction_id,
             confirmation_code: data.confirmation_code
         }
     ).await {
-        Ok(auth) => Ok(Json(UuidWrapper{ uuid: auth.user_id.into() })),
+        Ok(_) => JsonResponse::new_ok( ResOk { ok: true } ),
         Err(err) => {
             match err {
-                use_cases::add_identy_confirm::UpdateError::Unknown(_) => Err(StatusCode::INTERNAL_SERVER_ERROR),
-                use_cases::add_identy_confirm::UpdateError::Unautorized => Err(StatusCode::UNAUTHORIZED),
-                _ => Err(StatusCode::BAD_REQUEST),
+                add_identy_confirm::UpdateError::InvalidData(err) => JsonResponse::new_bad_req_err(0, err),
+                add_identy_confirm::UpdateError::Unauthorized(err) => JsonResponse::new_unauthorized_err(0, err),
+                add_identy_confirm::UpdateError::Unknown(err) => JsonResponse::new_int_ser_err(0, err),
             }
         },
     }
@@ -225,21 +226,25 @@ pub async fn handle_add_identifier_confirmation(
 pub async fn handle_password_recovery_request(
     State(state): State<AppState>,
     Json(identifier): Json<IdentificationJson>,
-) -> Result<(), StatusCode> {
-    match use_cases::reset_password_request::execute(
+) -> JsonResponse<ResOk> {
+    match reset_password_request::execute(
         &state.db_sql_pool,
         &state.email_conn,
         &AuthRepository {},
         &AWSEmailService {},
         &state.config.secret,
-        use_cases::reset_password_request::Payload {
+        reset_password_request::Payload {
             identifier_type: identifier.id_type,
             identifier_value: identifier.value,
             domain: "localhost:8000".to_string(),
         }
     ).await {
-        Ok(_) => Ok(()),
-        Err(_) => Err(StatusCode::BAD_REQUEST),
+        Ok(_) => JsonResponse::new_ok(ResOk { ok: true }),
+        Err(err) => match err {
+            reset_password_request::ResetError::InvalidData(err) => JsonResponse::new_bad_req_err(0, err),
+            reset_password_request::ResetError::NotFound(err) => JsonResponse::new_not_found_err(0, err),
+            reset_password_request::ResetError::Unknown(err) => JsonResponse::new_int_ser_err(0, err),
+        },
     }
 }
 
@@ -249,17 +254,22 @@ pub async fn handle_password_reset_confirmation(
     State(state): State<AppState>,
     Path(token): Path<String>,
     Json(new_password): Json<PasswordJson>,
-) -> Result<Json<Uuid>, StatusCode> {
-    match use_cases::reset_password_confirm::execute(
+) -> JsonResponse<UuidWrapper> {
+    match reset_password_confirm::execute(
         &state.db_sql_pool,
         &AuthRepository {},
         &state.config.secret,
-        use_cases::reset_password_confirm::Payload {
+        reset_password_confirm::Payload {
             token,
             password: new_password.password,
         }
     ).await {
-        Ok(auth) => Ok(Json(auth.user_id.into())),
-        Err(_) => Err(StatusCode::BAD_REQUEST),
+        Ok(auth) => JsonResponse::new_ok(UuidWrapper { uuid: auth.user_id.into() }),
+        Err(err) => match err {
+            reset_password_confirm::ResetError::InvalidData(err) => JsonResponse::new_bad_req_err(0, err),
+            reset_password_confirm::ResetError::Unauthorized(err) => JsonResponse::new_unauthorized_err(0, err),
+            reset_password_confirm::ResetError::NotFound(err) => JsonResponse::new_not_found_err(0, err),
+            reset_password_confirm::ResetError::Unknown(err) => JsonResponse::new_int_ser_err(0, err),
+        }
     }
 }
